feat: enhance dashboard layout and sidebar functionality
- Added new color variables for light and lighter gray in globals.css.
- Updated primary foreground color for better contrast.
- Modified DashboardHeader to include active sidebar item label using i18next for translations.
- Adjusted layout in DashboardLayout for responsive design.
- Changed DashboardSidebar to be hidden on smaller screens and only visible on larger devices.
- Updated Logo component to use responsive image sizes.
- Refactored SidebarItem to utilize new useActiveSidebarItem hook for active state management.
- Created useActiveSidebarItem hook to manage active sidebar item based on current pathname and locale.
- Added new logo.svg file for branding.

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -23,6 +23,8 @@
   --color-ring: var(--ring);
   --color-input: var(--input);
   --color-border: var(--border);
+  --color-gray-light: var(--gray-light);
+  --color-gray-lighter: var(--gray-lighter);
   --color-destructive: var(--destructive);
   --color-accent-foreground: var(--accent-foreground);
   --color-accent: var(--accent);
@@ -72,7 +74,7 @@
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
   --primary: oklch(0.428 0.243 264.376);
-  --primary-foreground: oklch(0.985 0 0);
+  --primary-foreground: oklch(0.215 0.07 247.5);
   --secondary: oklch(0.741 0.177 193.599);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
@@ -80,7 +82,9 @@
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
+  --border: oklch(0.945 0.027 233.5);
+  --gray-light: oklch(0.945 0.027 233.5);
+  --gray-lighter: oklch(0.922 0.024 233.5);
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
   --chart-1: oklch(0.646 0.222 41.116);
@@ -138,5 +142,8 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+  .heading-one-semibold {
+    @apply text-lg md:text-xl text-primary-foreground font-semibold;
   }
 }
