--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -38,6 +38,12 @@
   --color-popover: var(--popover);
   --color-card-foreground: var(--card-foreground);
   --color-card: var(--card);
+  --color-dash-red: var(--dash-red);
+  --color-dash-pink: var(--dash-pink);
+  --color-dash-yellow: var(--dash-yellow);
+  --color-dash-blue: var(--dash-blue);
+  --color-dash-green: var(--dash-green);
+  --color-dash-soft-blue: var(--dash-soft-blue);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -85,7 +91,7 @@
   --border: oklch(0.945 0.027 233.5);
   --gray-light: oklch(0.945 0.027 233.5);
   --gray-lighter: oklch(0.922 0.024 233.5);
-  --input: oklch(0.922 0 0);
+  --input: oklch(0.922 0.024 233.5);
   --ring: oklch(0.708 0 0);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
@@ -98,8 +104,14 @@
   --sidebar-primary-foreground: oklch(0.985 0 0);
   --sidebar-accent: oklch(0.97 0 0);
   --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
+  --sidebar-border: oklch(0.922 0.024 233.5);
   --sidebar-ring: oklch(0.708 0 0);
+  --dash-red: oklch(0.577 0.245 27.325);
+  --dash-pink: oklch(0.741 0.184 27);
+  --dash-yellow: oklch(0.828 0.189 84.429);
+  --dash-blue: oklch(0.646 0.222 241.5);
+  --dash-green: oklch(0.741 0.177 193.599);
+  --dash-soft-blue: oklch(0.556 0.07 247.5);
 }
 
 .dark {
