--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -44,6 +44,7 @@
   --color-dash-blue: var(--dash-blue);
   --color-dash-green: var(--dash-green);
   --color-dash-soft-blue: var(--dash-soft-blue);
+  --color-dash-blue-darker: var(--dash-blue-darker);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -112,6 +113,7 @@
   --dash-blue: oklch(0.646 0.222 241.5);
   --dash-green: oklch(0.741 0.177 193.599);
   --dash-soft-blue: oklch(0.556 0.07 247.5);
+  --dash-blue-darker: oklch(0.215 0.07 247.5);
 }
 
 .dark {
@@ -157,5 +159,14 @@
   }
   .heading-one-semibold {
     @apply text-lg md:text-xl text-primary-foreground font-semibold;
+  }
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 }
