--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -50,6 +50,9 @@
   --color-dash-color-error: var(--dash-color-error);
   --color-dash-soft-blue: var(--dash-soft-blue);
   --color-dash-blue-darker: var(--dash-blue-darker);
+  --color-dash-gray-darker: var(--dash-gray-darker);
+  --color-dash-pink: var(--dash-dash-pink);
+  --color-dash-orange: var(--dash-orange);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -124,6 +127,9 @@
   --dash-green-light: #dcfaf8;
   --dash-soft-blue: #718ebf;
   --dash-blue-darker: oklch(0.215 0.07 247.5);
+  --dash-gray-darker: #343c6a;
+  --dash-pink: #fa00ff;
+  --dash-orange: #fc7900;
 }
 
 .dark {
